== MediaWiki 1.6.6 ==

* Correct "revertpage" message in English
* (bug 5507) Logouttext uses now wiki markup
* (bug 5857, 5957) Update for German localisation (de)
* (bug 5586) <gallery> treated text as links
* (bug 5957) Update for Hebrew language (he)
* (bug 6025) SpecialImport: wrong message when no file selected
* (bug 6015) EditPage: add spacing in the boxes "edit is minor" and "watch this"

== MediaWiki 1.6.5 ==

May 2, 2006

* Rolled back the buggy patch for bug 5497

== MediaWiki 1.6.4 ==

May 2, 2006

* Further improvements to Hebrew localisation
* (bug 5544) Fix redirect arrow in Special:Listredirects for right-to-left
  languages
* Replace "doubleredirectsarrow" with a content language check that picks
  the appropriate arrow
* Remove live debugging hack which caused errors with certain database names
* (bug 5510) Warning produced when using {{SUBPAGENAME}} in some namespaces
* (bug 5548) Improvements to Indonesian localisation [patch: Ivan Lanin]
* (bug 5403) Fix Special:Newpages RSS/Atom feeds
* (bug 3359) Add hooks on completion of file upload
* (bug 5184) CSS misapplied to elements in Special:Allmessages due to conflicting
  anchor identifiers
* (bug 5519) Allow sidebar cache to be disabled; disable it by default.
* Add $wgReservedUsernames configuration directive to block account creation/use
* (bug 5576) Remove debugging hack in session check
* (bug 5181) Update "nogomatch" for Slovak
* (bug 5594) Id translation up to '# Login and logout pages' section
* (bug 5536) Use content language for editing help link
* Minor improvements to English language files
* Improvements to German localisation files
* (bug 5628) Translations for MessagesHr.php
* (bug 5595, 5644) Localisation for Bosnian language (bs)
* (bug 5592) Actions are logged with the default language for the
   wiki, not the language of the user performing the operation.
* (bug 5646) Compare for identical types in wfElement()